# bls_sigs_ref

./: .travis.yml  LICENSE  README.md
c-impl/: .clang-format  .gitignore  00README  README.md
c-impl/apps/: CMakeLists.txt
c-impl/bint/: bint.c  bint.h  bint_consts.h
python-impl/: .pylintrc  README.md  bls_pop_g1.py  bls_pop_g2.py  bls_sig_g1.py  bls_sig_g2.py  consts.py  curve_ops.py  fields.py  hash_to_field.py  opt_swu_g1.py  opt_swu_g2.py  pairing.py  serdes.py  serdesZ.py  util.py
rust-impl/: Cargo.toml  Makefile  README.md  cbindgen.toml
rust-impl/bls_sigs_test/: Cargo.toml
rust-impl/bls_sigs_test/src/: lib.rs  test.rs  testvec.rs
rust-impl/c_wrapper/: bls_c.h  test.c
rust-impl/lib/: libbls_sigs_ref_rs.rlib  static_funs.txt
rust-impl/src/: api.rs  chain.rs  chains.rs  cofactor.rs  cofactors.rs  ffi.rs  hash_to_field.rs  lib.rs  opt_sswu_g1.rs  opt_sswu_g2.rs  signature.rs  signum.rs  test.rs  tests.rs
rust-impl/src/chain/: tests.rs
rust-impl/src/chains/: mod.rs
rust-impl/src/cofactor/: tests.rs
rust-impl/src/cofactors/: mod.rs  tests.rs
rust-impl/src/hash_to_field/: mod.rs  tests.rs
rust-impl/src/isogenies/: g1_consts.rs  g2_consts.rs  mod.rs  tests.rs
rust-impl/src/isogeny/: g1.rs  g1_consts.rs  g2.rs  mod.rs
rust-impl/src/osswu_map/: g1.rs  g2.rs  mod.rs  tests.rs
rust-impl/src/serdes/: g1.rs  g2.rs  mod.rs  tests.rs
sage-impl/: .gitignore  Makefile  README.md  bls_pop_g1.sage  bls_pop_g2.sage  bls_sig_common.sage  bls_sig_consts.sage  bls_sig_g1.sage  bls_sig_g2.sage  bls_sig_in_g1.sage  bls_sig_in_g2.sage  g1_common.sage  g2_common.sage  hash_to_field.py  opt_sswu_g1.sage  opt_sswu_g2.sage  serdes.sage  serdesZ.sage  svdw_g1.sage  svdw_g2.sage  util.py  utils.py
src/: .gitignore  CMakeLists.txt  README.md
src/apps/: CMakeLists.txt  hash2_and_check.c  hash2_and_check_outliers.c  hash2_svdw_1.c  hash2_svdw_2.c  hash2_svdw_rG.c  hash2_swu_1.c  hash2_swu_rG.c  hash_and_check.c  hash_and_check_outliers.c  hash_svdw_1.c  hash_svdw_2.c  hash_svdw_rG.c  hash_swu_1.c  hash_swu_rG.c  hash_to_g1.c  hash_to_g2.c
src/bint/: bint.c  bint.h  bint_chains.h  bint_consts.h  bint_internal.h
src/bint2/: bint2.c  bint2.h  bint2_chains.h
src/curve/: arith.c  arith.h  consts.c  consts.h  curve.h  globals.c  globals.h  iso.h  multiexp.h  ops.c  ops.h  svdw.c  swu.c
src/curve2/: arith2.c  arith2.h  consts2.c  consts2.h  curve2.h  fp2.c  globals2.c  globals2.h  ops2.c  ops2.h  psi2.c  psi2.h  svdw2.c  swu2.c
src/etc/: build_type.cmake  cflags.cmake  clang_format.cmake  clang_tidy.cmake  gen_iso_params.sage  tests.cmake
src/test/: bench_setup  g2_test.sage  proc_bench.sh  run_bench.sh  run_simple_test.sh  run_test.sh  test.sage  to_affine.py
src/util/: util.c  util.h
test-vectors/: README.md  fips_186_3  fips_186_3_B233  fips_186_3_B283  fips_186_3_B409  fips_186_3_B571  fips_186_3_K233  fips_186_3_K283  fips_186_3_K409  fips_186_3_K571  fips_186_3_P224  fips_186_3_P256  fips_186_3_P384  fips_186_3_P521  rfc6979
(+177 files in other folders)
