[package]
name = "bls_sigs_ref-rs"
version = "0.1.0"
authors = ["kwantam <kwantam@gmail.com>"]
license = "MIT"

homepage = "https://github.com/algorand/bls_sigs_ref"
description = "BLS signatures draft std, ref impl"
repository = "https://github.com/algorand/bls_sigs_ref"
documentation = "https://docs.rs/bls_sigs_ref"


[dependencies]
ff = "0.4"
hkdf = "0.8.0"
#pairing-plus = { version = "0.17.0", git = "https://github.com/algorand/pairing-plus", branch = "release-0.17.0" }
pairing-plus = "0.17.0"
sha2 = "0.8.0"

[dev-dependencies]
byteorder = "1"
hex-literal = "0.1"
rand = "0.4"


[lib]
crate-type = ["rlib", "staticlib"]
