[package]
name = "bls_sigs_ref"
version = "0.2.0"
authors = ["kwantam <kwantam@gmail.com>"]
license = "MIT"

homepage = "https://github.com/algorand/bls_sigs_ref"
description = "BLS signatures draft std, ref impl"
repository = "https://github.com/algorand/bls_sigs_ref"
documentation = "https://docs.rs/bls_sigs_ref"


[dependencies]
#ff = {path = "../../ff2"}
ff = { git = "https://github.com/algorand/ff"}
hkdf = "0.8"
#pairing-plus = {path = "../../pairing-plus"}
#pairing-plus = { git = "https://github.com/algorand/pairing-plus", branch = "master" }
pairing-plus = "0.18"
sha2 = "0.8"

[dev-dependencies]
byteorder = "1"
hex-literal = "0.1"
rand = "0.4"


[lib]
crate-type = ["rlib", "staticlib"]
