[package]
name = "bls_sigs_ref"
version = "0.3.0"
authors = ["kwantam <kwantam@gmail.com>"]
license = "MIT"

homepage = "https://github.com/algorand/bls_sigs_ref"
description = "BLS signatures draft std, ref impl"
repository = "https://github.com/algorand/bls_sigs_ref"
documentation = "https://docs.rs/bls_sigs_ref"


[dependencies]
#ff-zeroize = { git = "https://github.com/algorand/ff-zeroize"}
ff-zeroize = "0.6.3"
hkdf = "0.8.0"
#pairing-plus = { path = "../../pairing-plus" }
pairing-plus = "0.19"
sha2 = "0.8.0"

[dev-dependencies]
byteorder = "1"
hex-literal = "0.1"
rand = "0.4"


[lib]
crate-type = ["rlib", "staticlib"]
